--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
 @media screen and (max-width:400px){
 
     .heading{
-        margin-top: -80px;
+        margin-top: 70px;
         width: 80%;
     }
 
@@ -68,7 +68,7 @@ body{
 
     .deadline{
         background-color: #394867;
-        padding: 25px 10px 0px 10px;
+        padding: 15px;
         border-radius: 5px;
         width: 70%;
         margin-bottom: 25px;
@@ -80,16 +80,14 @@ body{
     }
 
     .box{
-        height: 10vh;
+        height: 14vh;
         margin-bottom: 25px;
         margin-right: 0;
     }
 
     .box h2{
-        margin-top: 20px;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
     }
-
     .box span{
         font-size: 18px;
     }
